<resources>
    <string name="app_name">Daily Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Account</string>
    <string name="nav_header_subtitle">Track your daily transactions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_category">Heads</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>

    <string name="overview">Overview</string>

</resources>