<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:fontFamily="@font/rajdhani_medium"
            android:title="@string/menu_dashboard"/>
        <item
            android:id="@+id/menu_transaction"
            android:icon="@drawable/ic_transaction"
            android:fontFamily="@font/rajdhani_medium"
            android:title="@string/menu_transaction"/>
        <item
            android:id="@+id/menu_budget"
            android:icon="@drawable/ic_budget"
            android:fontFamily="@font/rajdhani_medium"
            android:title="@string/menu_budget"/>
        <item
            android:id="@+id/menu_category"
            android:icon="@drawable/ic_category"
            android:fontFamily="@font/rajdhani_medium"
            android:title="@string/menu_category"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/menu_report"
                android:icon="@drawable/ic_report"
                android:fontFamily="@font/rajdhani_medium"
                android:title="@string/menu_reports"/>
        </menu>
    </item>

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_report"
            android:icon="@drawable/ic_report"
            android:title="Report"/>

    </group>-->



    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/ic_setting"
                android:fontFamily="@font/rajdhani_medium"
                android:title="@string/menu_setting"/>
            <item
                android:id="@+id/menu_support"
                android:icon="@drawable/ic_support"
                android:fontFamily="@font/rajdhani_medium"
                android:title="@string/menu_support"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_about"
                android:fontFamily="@font/rajdhani_medium"
                android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>